feature(add-mcp-server): add model context protocol server support